// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button Group Base DOM Snapshot 1`] = `
<div>
  <fieldset
    className="slds-form-element"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Day of week
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-radio_button-group"
      >
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Mon"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Mon"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Mon"
          >
            <span
              className="slds-radio_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={true}
            id="Tue"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Tue"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Tue"
          >
            <span
              className="slds-radio_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Wed"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Wed"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Wed"
          >
            <span
              className="slds-radio_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Thu"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Thu"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Thu"
          >
            <span
              className="slds-radio_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Fri"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Fri"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Fri"
          >
            <span
              className="slds-radio_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Radio Button Group Base HTML Snapshot 1`] = `
"<div>
  <fieldset class=\\"slds-form-element\\">
    <legend class=\\"slds-form-element__legend slds-form-element__label\\">Day of week</legend>
    <div class=\\"slds-form-element__control\\">
      <div class=\\"slds-radio_button-group\\"><span class=\\"slds-button slds-radio_button\\"><input type=\\"radio\\" id=\\"Mon\\" name=\\"dayOfWeek\\" value=\\"Mon\\"/><label class=\\"slds-radio_button__label\\" for=\\"Mon\\"><span class=\\"slds-radio_faux\\">Mon</span></label>
        </span><span class=\\"slds-button slds-radio_button\\"><input type=\\"radio\\" id=\\"Tue\\" name=\\"dayOfWeek\\" value=\\"Tue\\" checked=\\"\\"/><label class=\\"slds-radio_button__label\\" for=\\"Tue\\"><span class=\\"slds-radio_faux\\">Tue</span></label>
        </span><span class=\\"slds-button slds-radio_button\\"><input type=\\"radio\\" id=\\"Wed\\" name=\\"dayOfWeek\\" value=\\"Wed\\"/><label class=\\"slds-radio_button__label\\" for=\\"Wed\\"><span class=\\"slds-radio_faux\\">Wed</span></label>
        </span><span class=\\"slds-button slds-radio_button\\"><input type=\\"radio\\" id=\\"Thu\\" name=\\"dayOfWeek\\" value=\\"Thu\\"/><label class=\\"slds-radio_button__label\\" for=\\"Thu\\"><span class=\\"slds-radio_faux\\">Thu</span></label>
        </span><span class=\\"slds-button slds-radio_button\\"><input type=\\"radio\\" id=\\"Fri\\" name=\\"dayOfWeek\\" value=\\"Fri\\"/><label class=\\"slds-radio_button__label\\" for=\\"Fri\\"><span class=\\"slds-radio_faux\\">Fri</span></label>
        </span>
      </div>
    </div>
  </fieldset>
</div>"
`;

exports[`Radio Button Group Disabled DOM Snapshot 1`] = `
<div>
  <fieldset
    className="slds-form-element"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Day of week
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-radio_button-group"
      >
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            disabled={true}
            id="Mon"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Mon"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Mon"
          >
            <span
              className="slds-radio_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={true}
            disabled={true}
            id="Tue"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Tue"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Tue"
          >
            <span
              className="slds-radio_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            disabled={true}
            id="Wed"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Wed"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Wed"
          >
            <span
              className="slds-radio_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            disabled={true}
            id="Thu"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Thu"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Thu"
          >
            <span
              className="slds-radio_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            disabled={true}
            id="Fri"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Fri"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Fri"
          >
            <span
              className="slds-radio_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Radio Button Group Error DOM Snapshot 1`] = `
<div>
  <fieldset
    className="slds-form-element slds-has-error"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Day of week
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-radio_button-group"
      >
        <span
          className="slds-button slds-radio_button"
        >
          <input
            aria-describedby="radioGroupError"
            checked={false}
            id="Mon"
            name="radioGroup"
            onChange={[Function]}
            type="radio"
            value="Mon"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Mon"
          >
            <span
              className="slds-radio_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            aria-describedby="radioGroupError"
            checked={true}
            id="Tue"
            name="radioGroup"
            onChange={[Function]}
            type="radio"
            value="Tue"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Tue"
          >
            <span
              className="slds-radio_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            aria-describedby="radioGroupError"
            checked={false}
            id="Wed"
            name="radioGroup"
            onChange={[Function]}
            type="radio"
            value="Wed"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Wed"
          >
            <span
              className="slds-radio_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            aria-describedby="radioGroupError"
            checked={false}
            id="Thu"
            name="radioGroup"
            onChange={[Function]}
            type="radio"
            value="Thu"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Thu"
          >
            <span
              className="slds-radio_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            aria-describedby="radioGroupError"
            checked={false}
            id="Fri"
            name="radioGroup"
            onChange={[Function]}
            type="radio"
            value="Fri"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Fri"
          >
            <span
              className="slds-radio_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
      <div
        className="slds-form-element__help"
        id="radioGroupError"
      >
        error message
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Radio Button Group Required DOM Snapshot 1`] = `
<div>
  <fieldset
    className="slds-form-element"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
      </abbr>
      Day of week
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-radio_button-group"
      >
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Mon"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Mon"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Mon"
          >
            <span
              className="slds-radio_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={true}
            id="Tue"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Tue"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Tue"
          >
            <span
              className="slds-radio_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Wed"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Wed"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Wed"
          >
            <span
              className="slds-radio_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Thu"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Thu"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Thu"
          >
            <span
              className="slds-radio_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-radio_button"
        >
          <input
            checked={false}
            id="Fri"
            name="dayOfWeek"
            onChange={[Function]}
            type="radio"
            value="Fri"
          />
          <label
            className="slds-radio_button__label"
            htmlFor="Fri"
          >
            <span
              className="slds-radio_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;
